Fix: remove horizontal scroll

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -29,6 +29,7 @@
 }
 
 #root {
+  overflow-x: hidden;
   position: relative;
 }
 
